refactor: enhance image styles and API settings handling

--- a/AzureAIContentSafety.API/AzureAIContentSafety.API/appsettings.Development.json
+++ b/AzureAIContentSafety.API/AzureAIContentSafety.API/appsettings.Development.json
@@ -9,8 +9,20 @@
     "DefaultConnection": "Server=localhost;Database=DemoSocialNetwork;Trusted_Connection=True;Encrypt=false"
   },
   "AzureAIContentSafety": {
-    "endpoint": "https://<SERVICE_NAME>.cognitiveservices.azure.com/",
-    "apiKey": ""
+    "Endpoint": "https://<SERVICE_NAME>.cognitiveservices.azure.com/",
+    "ApiKey": "",
+    "TextSeverityThreshold": {
+      "Blur": 3,
+      "Reject": 5
+    },
+    "ImageSeverityThreshold": {
+      "Blur": 2,
+      "Reject": 4
+    }
   },
-  "AzureStorageConnectionString": ""
+  "AzureStorage": {
+    "BlobCacheControl": "max-age=21600",
+    "BlobContainerName": "images",
+    "ConnectionString": ""
+  }
 }
